# valinor_host

./: Makefile  README.md  app.c  client.json  main.c  meson.build  run.sh  server.json
inc/: app.h  arp.h  core.h  crc.h  flowinfo.h  icmp.h  ip.h  kref.h  list.h  lock.h  marker.h  marker_lru.h  net_tx.h  rte_reorder_enhanced.h  shuffler.h  shuffler_lru.h  tcp.h  udp.h  valinor.h
net/: arp.c  chksum.h  core.c  icmp.c  marker.c  rte_reorder_enhanced.c  shuffler.c  tcp.c  tcp_debug.c  tcp_in.c  tcp_out.c  udp.c
util/: frozen.c  log.c  time.c  time.h
workloads/: cache_size.csv
