# Created by: Erfan Sharafzadeh, Nov 2020
# Based on DPDK ordering example

# meson file, for building this example as part of a main DPDK build.
#
# To build this example as a standalone application with an already-installed
# DPDK instance, use 'make'

deps += 'valinor'
sources = files(
	'main.c'
)
